Security config reverted